--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,12 @@
-<app-header></app-header>
-<router-outlet></router-outlet>
+<mat-drawer-container hasBackdrop>
+    <mat-drawer #drawer mode="over" [opened]="sidenavOpen">Drawer content</mat-drawer>
+    <mat-drawer-content>
+        <mat-toolbar>
+            <button mat-icon-button aria-label="Open drawer" (click)="drawer.toggle()">
+                <mat-icon>menu</mat-icon>
+            </button>
+            <span>Skate Shop</span>
+        </mat-toolbar>
+        <router-outlet></router-outlet>
+    </mat-drawer-content>
+</mat-drawer-container>
