--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,11 @@
 <mat-drawer-container hasBackdrop>
-    <mat-drawer #drawer mode="over" [opened]="sidenavOpen">Drawer content</mat-drawer>
+    <mat-drawer #drawer mode="over">
+        <h2 routerLink="/" (click)="drawer.toggle()">Skate Shop</h2>
+        <mat-nav-list>
+            <a mat-list-item routerLink="/" (click)="drawer.toggle()">Home</a>
+            <a mat-list-item routerLink="/cart" (click)="drawer.toggle()">Cart</a>
+        </mat-nav-list>
+    </mat-drawer>
     <mat-drawer-content>
         <mat-toolbar>
             <button mat-icon-button aria-label="Open drawer" (click)="drawer.toggle()">
