--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,5 +14,22 @@
             <span>Skate Shop</span>
         </mat-toolbar>
         <router-outlet></router-outlet>
+        <footer>
+            <mat-grid-list cols="2" rowHeight="200px">
+                <mat-grid-tile>Made with <mat-icon>favorite</mat-icon> by Carlos</mat-grid-tile>
+                <mat-grid-tile>
+                    <div>
+                        <h3 class="footer-title">Contact</h3>
+                        <a class="footer-link" href="https://www.linkedin.com/in/carlos-cerqueira-5153991aa/">
+                            linkedin
+                        </a>
+                        <br/>
+                        <a class="footer-link" href="https://github.com/Carloscerq">
+                            github
+                        </a>
+                    </div>
+                </mat-grid-tile>
+            </mat-grid-list>
+        </footer>
     </mat-drawer-content>
 </mat-drawer-container>
