--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,4 +1,13 @@
-<div *ngFor="let product of products">
-    {{product.name}}
-</div>
+<main class="main">
+    <mat-card *ngFor="let product of products" class="product-card">
+        <mat-card-header>
+            <mat-card-title>{{product.name}}</mat-card-title>
+            <mat-card-subtitle>{{product.type}}</mat-card-subtitle>
+        </mat-card-header>
+        <img mat-card-image src={{product.image}} alt="Product" class="product-card-image">
+        <mat-card-actions>
+            <button mat-button>ADD TO CART</button>
+        </mat-card-actions>
+    </mat-card>
+</main>
 
