--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -1,1 +1,9 @@
-<p>cart works!</p>
+<main>
+    <mat-card *ngFor="let product of products" class="example-card">
+        <mat-card-title-group>
+            <mat-card-title></mat-card-title>
+            <mat-card-subtitle>Small</mat-card-subtitle>
+            <img mat-card-sm-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" >
+        </mat-card-title-group>
+    </mat-card>
+</main>
